# Hallarch

./: Makefile  README.md  design_proposal.md  plots.py  pyproject.toml  research_paper_analysis.md
data/: merged_en_de_es.csv
data/interim/: model_df.csv  model_df_100.csv  model_df_100_lorem.csv  model_df_200_lorem.csv  model_df_500_lorem.csv  self_critique_consistency_df.csv
data/processed/: model_df_100_lorem_normalized.csv  model_df_100_normalized.csv  model_df_200_lorem_normalized.csv  model_df_500_lorem_normalized.csv  model_df_normalized.csv  model_df_vote_classification_normalized.csv
detector/: app.py  backend.py
docs/: research_paper_analysis.md  truthfulqa_lorem_prompt.docx
hallarch/: __init__.py  dataset.py  features.py
hallarch/modeling/: predict.py  train.py
notebooks/: cd_truthfulqa_experiment_lorem_ipsum.ipynb  cd_truthfulqa_experiment_with_correct_answers.ipynb  chain_of_thought.ipynb  cot_seed_16_n50.html  language.ipynb  model_df.csv  model_df_normalized.csv  multiple_choice_baseline_critique_consistency.ipynb  truthfulqa_baseline_self_critique_self_consistency_analysis.ipynb  truthfulqa_experiment.ipynb
reports/truthfulqa/: truthfulqa_analysis.ipynb  visual_streamlit.py
